tests/snapshots/r#mod__scroll_down.snap
---
source: tests/mod.rs
expression: ctx.redact_buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 20 },
    content: [
        "▌+line 6                                                                        ",
        "▌+line 7                                                                        ",
        "▌+line 8                                                                        ",
        "▌+line 9                                                                        ",
        "▌+line 10                                                                       ",
        "▌+line 11                                                                       ",
        "▌+line 12                                                                       ",
        "▌+line 13                                                                       ",
        "▌+line 14                                                                       ",
        "▌+line 15                                                                       ",
        "▌+line 16                                                                       ",
        "▌+line 17                                                                       ",
        "▌+line 18                                                                       ",
        "▌+line 19                                                                       ",
        "▌+line 20                                                                       ",
        "▌+line 21                                                                       ",
        "▌+line 22                                                                       ",
        "▌+line 23                                                                       ",
        "▌+line 24                                                                       ",
        "▌+line 25                                                                       ",
    ],
    styles: [
        x: 0, y: 0, fg: Blue, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 0, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Blue, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Blue, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 2, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Blue, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 3, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Blue, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 4, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Blue, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 5, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Blue, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 6, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Blue, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 7, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: Blue, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 8, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Blue, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 9, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: Blue, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 10, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 11, fg: Blue, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 11, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 12, fg: Blue, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 12, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 13, fg: Blue, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 13, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 14, fg: Blue, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 14, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 15, fg: Blue, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 15, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 16, fg: Blue, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 16, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 17, fg: Blue, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 17, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 18, fg: Blue, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 18, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 19, fg: Blue, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 19, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
