tests/snapshots/r#mod__show.snap
---
source: tests/mod.rs
expression: ctx.redact_buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 20 },
    content: [
        " commit ________________________________________            ",
        " Author: CI <ci@example.com>                                ",
        " Date:   Sun, 18 Feb 2024 14:00:00 +0100                    ",
        "                                                            ",
        "     add firstfile                                          ",
        "                                                            ",
        "     Commit body goes here                                  ",
        "                                                            ",
        " firstfile                                                  ",
        "🢒@@ -0,0 +1 @@                                              ",
        "▌+This should be visible                                    ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 9, fg: Blue, bg: Reset, underline: Reset, modifier: BOLD,
        x: 14, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 10, fg: Blue, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 10, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
