tests/snapshots/r#mod__switch_branch_input.snap
---
source: tests/mod.rs
expression: ctx.redact_buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 10 },
    content: [
        " Branches                                                                       ",
        " * hi                                                                           ",
        "🢒  main   origin/main                                                           ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "────────────────────────────────────────────────────────────────────────────────",
        "$ git checkout hi                                                               ",
        "Switched to branch 'hi'                                                         ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 3, y: 2, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 7, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 10, y: 2, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 8, fg: Blue, bg: Reset, underline: Reset, modifier: BOLD,
        x: 17, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
