tests/snapshots/r#mod__unstaged_changes.snap
---
source: tests/mod.rs
expression: ctx.redact_buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 20 },
    content: [
        "🢒On branch main                                             ",
        "                                                            ",
        " Unstaged changes (1)                                       ",
        " testfile                                                   ",
        " @@ -1,2 +1,2 @@                                            ",
        " -testing                                                   ",
        " +test                                                      ",
        "  testtest                                                  ",
        "                                                            ",
        " Recent commits                                             ",
        " _______ main add testfile                                  ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Rgb(216, 166, 87), bg: Rgb(80, 73, 69), underline: Reset, modifier: BOLD,
        x: 15, y: 0, fg: Reset, bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Rgb(216, 166, 87), bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Rgb(211, 134, 155), bg: Reset, underline: Reset, modifier: BOLD,
        x: 9, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Rgb(125, 174, 163), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Rgb(234, 105, 98), bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: Rgb(234, 105, 98), bg: Reset, underline: Reset, modifier: REVERSED,
        x: 9, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Rgb(169, 182, 101), bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 6, fg: Rgb(169, 182, 101), bg: Reset, underline: Reset, modifier: REVERSED,
        x: 6, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Rgb(216, 166, 87), bg: Reset, underline: Reset, modifier: BOLD,
        x: 15, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Rgb(216, 166, 87), bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 10, fg: Rgb(169, 182, 101), bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
