tests/snapshots/r#mod__updated_externally.snap
---
source: tests/mod.rs
expression: ctx.redact_buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 20 },
    content: [
        " No branch                                                                      ",
        "                                                                                ",
        " Untracked files                                                                ",
        "▌a                                                                              ",
        "                                                                                ",
        " Staged changes (1)                                                             ",
        " added   b                                                                      ",
        " @@ -0,0 +1 @@                                                                  ",
        " +test                                                                          ",
        "                                                                                ",
        " Recent commits                                                                 ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Blue, bg: Reset, underline: Reset, modifier: BOLD | DIM,
        x: 1, y: 3, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
